employee-service/k8s/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: employee-service
  namespace: office
  labels:
    app: employee-service
spec:
  selector:
    app: employee-service
  ports:
    - port: 8080
      name: http
#  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service-v1
  namespace: office
  labels:
    app: employee-service
spec:
  selector:
    matchLabels:
      app: employee-service
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: employee-service
        version: v1
    spec:
      containers:
        - name: employee-service
          image: 'registry.gitlab.com/daolebaothoa123/rest-cicd/employee-service:latest'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          imagePullSecrets:
            - name: gitlab-auth
