employee-service/k8s/istio-rules.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: employee-service-destination
spec:
  host: employee-service
  subsets:
    - name: v1
      labels:
        version: v1
---
#apiVersion: networking.istio.io/v1beta1
#kind: VirtualService
#metadata:
#  name: employee-service
#spec:
#  hosts:
#    - employee-service
#  http:
#    - route:
#        - destination:
#            host: employee-service
#            subset: v1
